refactored for transport layer

--- a/pages/index.html
+++ b/pages/index.html
@@ -83,7 +83,7 @@
     <br>
     <center>
         <button type="button" class="button3" onclick="alert('Hi user!')">I trust cert</button>
-        <button type="button" class="button3" onclick="location.href='https://www.ya.ru'">I don't trust</button>
+        <button type="button" class="button3" onclick="location.href='/cgi/env'">CGI-bin</button>
         <button type="button" class="button3" onclick="location.href='about.html'">About</button>
         <button type="button" class="button3" onclick="location.href='login.html'">Login</button>
     </center>
