--- a/pages/index.html
+++ b/pages/index.html
@@ -82,7 +82,7 @@
     </table>
     <br>
     <center>
-        <button type="button" class="button3" onclick="alert('Hi user!')">I trust cert</button>
+        <button type="button" class="button3" onclick="location.href='/admin/admin_header.html'">I trust cert</button>
         <button type="button" class="button3" onclick="location.href='/cgi/env'">CGI-bin</button>
         <button type="button" class="button3" onclick="location.href='about.html'">About</button>
         <button type="button" class="button3" onclick="location.href='login.html'">Login</button>
