Prepare to admin page

--- a/pages/index.html
+++ b/pages/index.html
@@ -82,10 +82,10 @@
     </table>
     <br>
     <center>
-        <button type="button" class="button3" onclick="location.href='/admin/admin_header.html'">I trust cert</button>
+        <button type="button" class="button3" onclick="location.href='/admin/admin_header.html'">Админ</button>
         <button type="button" class="button3" onclick="location.href='/cgi/env'">CGI-bin</button>
-        <button type="button" class="button3" onclick="location.href='about.html'">About</button>
-        <button type="button" class="button3" onclick="location.href='login.html'">Login</button>
+        <button type="button" class="button3" onclick="location.href='about.html'">О сервере</button>
+        <button type="button" class="button3" onclick="location.href='login.html'">Войти</button>
     </center>
     <br>
     <p>
