--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -1,10 +1,27 @@
 <html>
 <head>
    <title>Admin panel header</title>
+   <link href="admin.css" rel="stylesheet">
 </head>
+<script>
+function setFrame(frame) {
+  document.getElementById("screen").src=frame;
+}
+</script>
+
 <body>
-Coming soon
-    <br>
-    <a href="/">Выйти</a>
+    <div>
+        <div>
+        <span>div_logo</span>
+        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Sessions</button>
+        <button type="button" class="button3" onclick="setFrame('/login.html');">Debug</button>
+        <button type="button" class="button3" onclick="setFrame('/upload');">Reserved</button>
+	<a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
+        </div>
+    </div>
+    <div>
+    <iframe src="default.html" width="100%" height="100%" id="screen">Вы не должны видеть это сообщение<iframe>
+    </div>
+<!-- style="border: none"  -->
 </body>
 </html>
