System info CGI

--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -14,7 +14,7 @@ function setFrame(frame) {
         <div>
         <span>div_logo</span>
         <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Sessions</button>
-        <button type="button" class="button3" onclick="setFrame('/login.html');">Debug</button>
+        <button type="button" class="button3" onclick="setFrame('/cgi/info');">System info</button>
         <button type="button" class="button3" onclick="setFrame('/upload');">Reserved</button>
 	<a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
         </div>
