--- a/pages/index.html
+++ b/pages/index.html
@@ -79,7 +79,7 @@
             <button type="button" class="button3" onclick="location.href='about.html'">О сервере</button>
             <button type="button" class="button3" onclick="location.href='/admin/admin_header.html'">Админ</button>
             <button type="button" class="button3" onclick="location.href='/cgi/env'">CGI-bin</button>
-            <button type="button" class="button3" onclick="location.href='about.html'">Отправить файлы</button>
+            <button type="button" class="button3" onclick="location.href='upload.html'">Отправить файлы</button>
             <button type="button" class="button3" onclick="location.href='login.html'">Войти</button>
         </center>
     </div>
