Update demo content

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,8 +15,8 @@
         }
 
         table, th, td {
-            border: 1px solid black;
-            background-color: rgb(240, 240, 240);
+            border: none;
+            background-color: none;
             border-spacing: 0;
             border-collapse: collapse;
         }
@@ -57,14 +57,28 @@
 </head>
 
 <body>
-    <h1>Xameleon Web Server</h1>
-    <br>
-    <br>
-    <p>
-        Исходный код проекта <a href="https://github.com/mandrookin/XameleonWeb">Xameleon Web Server</a>.<br>
-    </p>
-    <br>
-    <br>
-    <a href="/">Вернуться на главную страницу</a>
+    <div style="width=100%">
+        <h1>Xameleon Web Server</h1>
+        <br>
+        <div style="float:left; width: 20%; padding-left: 25px">
+            <img src="spiderwithweb.svg" alt="Web" class="avatar">
+        </div>
+        <div style="float:right; width:70%">
+            <br>
+            <br>
+            <p>
+                Вы находитесь на сайте программной библиотеки для разработки легковесных REST сервисов на языке С++. Эта страница отадана браузеру с помощью Xameleon-Web-Server,
+                который является демонстрационной программой и одновременно тестами для библиотеки. Текущий статус библиотеки - альфа-версия.
+            </p>
+            <br>
+            <p>
+                Исходный код проекта на <a href="https://github.com/mandrookin/XameleonWeb">github.com</a>.<br>
+            </p>
+            <br>
+            <p>
+                <a href="/">Вернуться на главную страницу</a>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
