--- a/pages/about.html
+++ b/pages/about.html
@@ -67,7 +67,7 @@
             <br>
             <br>
             <p>
-                Вы находитесь на сайте программной библиотеки для разработки легковесных REST сервисов на языке С++. Эта страница отадана браузеру с помощью Xameleon-Web-Server,
+                Вы находитесь на сайте программной библиотеки для разработки легковесных REST сервисов на языке С++. Эта страница отдана браузеру с помощью Xameleon-Web-Server,
                 который является демонстрационной программой и одновременно тестами для библиотеки. Текущий статус библиотеки - альфа-версия.
             </p>
             <br>
