--- a/pages/admin/default.html
+++ b/pages/admin/default.html
@@ -3,7 +3,14 @@
 <title>Суббота</title>
 </head>
 <body>
-Привет, ПОКС!<br>
-Это типа админская страничка
+    <div style="width=100%">
+        <div style="float:left; width: 70%; padding-left: 25px">
+            Это тестовая страница с правами редактора. Включен режим отладки.
+            <h2><br/>Внимание! Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
+        </div>
+        <div style="float:right; width:20%">
+            <img src="/mono-folder-html.svg" alt="Web" class="avatar">
+        </div>
+    <div>
 </body>
 </html>
