--- a/pages/admin/default.html
+++ b/pages/admin/default.html
@@ -4,12 +4,12 @@
 </head>
 <body>
     <div style="width=100%">
-        <div style="float:left; width: 70%; padding-left: 25px">
-            Это тестовая страница с правами редактора. Включен режим отладки.
-            <h2><br/>Внимание! Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
-        </div>
-        <div style="float:right; width:20%">
+        <div style="float:left; width:10%">
             <img src="/mono-folder-html.svg" alt="Web" class="avatar">
+        </div>
+        <div style="float:right; width: 80%; padding-left: 25px">
+            <br/>Это тестовая страница с правами редактора. Включен режим отладки.
+            <h2>Внимание! Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
         </div>
     <div>
 </body>
