--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -13,10 +13,10 @@ function setFrame(frame) {
     <div>
         <div>
         <span>div_logo</span>
-        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Sessions</button>
-        <button type="button" class="button3" onclick="setFrame('/cgi/info');">System info</button>
-        <button type="button" class="button3" onclick="setFrame('/upload');">Reserved</button>
-	<a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
+        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Сессии</button>
+        <button type="button" class="button3" onclick="setFrame('/cgi/info');">Оборудование</button>
+        <button type="button" class="button3" onclick="setFrame('/upload');">Файлы</button>
+        <a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
         </div>
     </div>
     <div>
