split host and port in header

--- a/pages/index.html
+++ b/pages/index.html
@@ -62,12 +62,12 @@
     <h1>
         <table align="center" style="margin-left: auto; margin-right: auto; background: none; border: none">
             <tr style="font-family: Tahoma">
-                <th style="width: 200px; background: none; border: none">Идея</th>
+                <th style="width: 200px; background: none; border: none; padding-left: 5px">Идея</th>
                 <th style="width: 300px; background: none; border: none">Средства разработки</th>
-                <th style="width: 300px; background: none; border: none">Поддержка</th>
+                <th style="width: 300px; background: none; border: none">При поддержке</th>
             </tr>
             <tr style="background: none; border: none">
-                <td style="width: 200px; background: none; border: none;"><a href="https://rksi.ru" target="_blank">РКСИ</a></td>
+                <td style="width: 200px; background: none; border: none; padding-left: 5px"><a href="https://rksi.ru" target="_blank"><a href="https://rksi.ru" target="_blank">РКСИ</a></td>
                 <td style="width: 300px; background: none; border: none"><a href="https://fastreport.ru/ru" target="_blank">Быстрые отчёты</a></td>
                 <td style="width: 300px; background: none; border: none"><a href="https://reportinglab.ru/" target="_blank">Лаборатория отчётов</a></td>
             </tr>
