store IP addresses in BerkeleyDB

--- a/pages/admin/default.html
+++ b/pages/admin/default.html
@@ -9,7 +9,7 @@
         </div>
         <div style="float:right; width: 80%; padding-left: 25px">
             <br/>Это тестовая страница с правами редактора. Включен режим отладки.
-            <h2>Внимание! Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
+            <h2>Внимание!<br/>Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
         </div>
     <div>
 </body>
