--- a/pages/login.html
+++ b/pages/login.html
@@ -129,7 +129,7 @@ span.psw {
 
 <h2>Пример модальной формы входа</h2>
 <p>
-<h3>ВНИМАНИЕ! Это тестовый сервер для отладки программного обеспечения! НЕ ВВОДИТЕ РЕАЛЬНЫЕ ДАННЫЕ!</h3>
+<h3>ВНИМАНИЕ! Это тестовый сервер для отладки программного обеспечения!<br/>НЕ ВВОДИТЕ РЕАЛЬНЫЕ ДАННЫЕ!</h3>
 Отправленные формой данные будут переданы сервером через CGI-BIN интерфейс программе на языке Python, которая возвратит HTML страницу с принятыми данными.
 </p>
 <br/>
