--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -13,14 +13,19 @@ function setFrame(frame) {
     <div>
         <div>
         <span>div_logo</span>
-        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Сессии</button>
         <button type="button" class="button3" onclick="setFrame('/cgi/info');">Оборудование</button>
+        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Сессии</button>
+        <button type="button" class="button3" onclick="setFrame('/admin/peers');">Адреса</button>
         <button type="button" class="button3" onclick="setFrame('/upload');">Файлы</button>
         <a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
         </div>
     </div>
     <div>
-    <iframe src="default.html" width="100%" height="100%" id="screen">Вы не должны видеть это сообщение<iframe>
+    <iframe src="default.html" width="100%" id="screen"
+        sandbox="allow-same-origin"
+        onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';">
+        Вы не должны видеть это сообщение
+    <iframe>
     </div>
 <!-- style="border: none"  -->
 </body>
