--- a/pages/index.html
+++ b/pages/index.html
@@ -112,6 +112,7 @@
         <a href="https://ru.wikipedia.org/wiki/Законы_Паркинсона" target="_blank">Законы Паркинсона</a>
         <br />
     </p>
+    <br/>
     <div>
         <table align="right" style="padding-right: 15px; margin-right: 20px; ">
             <tr>
@@ -133,6 +134,20 @@
         </table>
         <br />
     </div>
+    <br/>
+    <p>
+        <br />&emsp;
+   “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса; 
+   его величество даже не притронулся ни к чему. А этот нищий знай набивает себе живот! Недаром "живот" и "животное" - слова одного корня. 
+   И дернула же меня нелегкая забраться в этот Уэймет, чтоб ему провалиться! С самого утра ничего не продал, 
+   краснобайствовал перед снегом, играл на флейте для урагана, не заработал ни одного фартинга, а вечером тут как тут - нищие! 
+   Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами, 
+   а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего! 
+   Ни одного болвана на перекрестке, ни одного пенни в кассе!”
+        <br /><br />
+        <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
+        <br />
+</p>
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
