Prepare to keep references

--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -13,11 +13,12 @@ function setFrame(frame) {
     <div>
         <div>
         <span>div_logo</span>
-        <button type="button" class="button3" onclick="setFrame('/cgi/info');">Оборудование</button>
-        <button type="button" class="button3" onclick="setFrame('/admin/sessions');">Сессии</button>
+        <button type="button" class="button_adm" onclick="setFrame('/cgi/info');">Оборудование</button>
+        <button type="button" class="button_adm" onclick="setFrame('/admin/sessions');">Сессии</button>
         <button type="button" class="button3" onclick="setFrame('/admin/peers');">Адреса</button>
+        <button type="button" class="button3" onclick="setFrame('/admin/references');">Ссылки</button>
         <button type="button" class="button3" onclick="setFrame('/upload');">Файлы</button>
-        <a href = "/"><button type = 'submit' class = 'button3'>Выйти</button></a>
+        <a href="/"><button type='submit' class='button3'>Выйти</button></a>
         </div>
     </div>
     <div>
