fix character case

--- a/pages/index.html
+++ b/pages/index.html
@@ -112,6 +112,33 @@
         <a href="https://ru.wikipedia.org/wiki/Законы_Паркинсона" target="_blank">Законы Паркинсона</a>
         <br />
     </p>
+    <p>
+        <br />&emsp;
+   “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса; 
+   его величество даже не притронулся ни к чему. А этот нищий знай набивает себе живот! Недаром "живот" и "животное" - слова одного корня. 
+   И дернула же меня нелегкая забраться в этот Уэймет, чтоб ему провалиться! С самого утра ничего не продал, 
+   краснобайствовал перед снегом, играл на флейте для урагана, не заработал ни одного фартинга, а вечером тут как тут - нищие! 
+   Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами, 
+   а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего! 
+   Ни одного болвана на перекрестке, ни одного пенни в кассе!”
+        <br /><br />
+        <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
+        <br />
+</p>
+   <p>
+        <br />&emsp;
+   "Дом, в котором жил отец Тома, помещался в грязнейшей трущобе, именуемой Оффаль-Корт, за Пуддинг-Лэном. Это была небольшая, 
+   полуразвалившаяся лачуга, битком набитая бедняками. Семейство Канти занимало комнату на третьем этаже. В углу у отца с матерью 
+   было прилажено нечто вроде постели; что же касается Тома, его бабушки и двух сестер, Бетти и Наин, то они не были так ограничены 
+   в своих владениях, как супруги Канти: в их распоряжении оставался весь пол, и они могли спать, где им заблагорассудится. Им же 
+   принадлежали обрывки двух-трех одеял и несколько охапок старой полусгнившей соломы; но при всем желании этот хлам никак нельзя 
+   было назвать постелями. На день все это сваливалось куда-нибудь в угол, в одну общую кучу, а на ночь разбиралось младшими членами 
+   семьи для спанья."
+        <br /><br />
+        <a href="https://ru.wikipedia.org/wiki/Принц_и_нищий" target="_blank">Марк Твен «Принц и нищий»</a>
+        <br />
+</p>
+
     <br/>
     <div>
         <table align="right" style="padding-right: 15px; margin-right: 20px; ">
@@ -135,19 +162,6 @@
         <br />
     </div>
     <br/>
-    <p>
-        <br />&emsp;
-   “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса; 
-   его величество даже не притронулся ни к чему. А этот нищий знай набивает себе живот! Недаром "живот" и "животное" - слова одного корня. 
-   И дернула же меня нелегкая забраться в этот Уэймет, чтоб ему провалиться! С самого утра ничего не продал, 
-   краснобайствовал перед снегом, играл на флейте для урагана, не заработал ни одного фартинга, а вечером тут как тут - нищие! 
-   Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами, 
-   а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего! 
-   Ни одного болвана на перекрестке, ни одного пенни в кассе!”
-        <br /><br />
-        <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
-        <br />
-</p>
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
