Bugfixes. A lot of them. Some refactoring. Still under way.

--- a/pages/index.html
+++ b/pages/index.html
@@ -108,10 +108,11 @@
         секретарь и личный помощник. На шестой день он умер, подтвердив тем  самым
         разговоры о том, что ему  не  по  себе.  В  наше  время  такие  методы  не
         рекомендуются, да они и не нужны. Народ научился уходить вовремя.”
-        <br /><br />
+        <p style="text-align:right">
         <a href="https://ru.wikipedia.org/wiki/Законы_Паркинсона" target="_blank">Законы Паркинсона</a>
-        <br />
+        </p>
     </p>
+    <br/><br/><br/>
     <p>
         <br />&emsp;
    “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса; 
@@ -121,11 +122,12 @@
    Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами, 
    а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего! 
    Ни одного болвана на перекрестке, ни одного пенни в кассе!”
-        <br /><br />
-        <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
-        <br />
+   <p style="text-align:right">
+   <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
+   </p>
 </p>
-   <p>
+<br/><br/><br/>
+ <p>
         <br />&emsp;
    "Дом, в котором жил отец Тома, помещался в грязнейшей трущобе, именуемой Оффаль-Корт, за Пуддинг-Лэном. Это была небольшая, 
    полуразвалившаяся лачуга, битком набитая бедняками. Семейство Канти занимало комнату на третьем этаже. В углу у отца с матерью 
@@ -134,10 +136,22 @@
    принадлежали обрывки двух-трех одеял и несколько охапок старой полусгнившей соломы; но при всем желании этот хлам никак нельзя 
    было назвать постелями. На день все это сваливалось куда-нибудь в угол, в одну общую кучу, а на ночь разбиралось младшими членами 
    семьи для спанья."
-        <br /><br />
+   <p style="text-align:right">
         <a href="https://ru.wikipedia.org/wiki/Принц_и_нищий" target="_blank">Марк Твен «Принц и нищий»</a>
-        <br />
+   </p>
 </p>
+<br/><br/><br/>
+
+   <p>Едва кондуктор выговорил эти слова, как перед самым носом дяди появился молодой джентльмен в напудренном парике и небесно-голубом кафтане с серебряными галунами и очень широкими фалдами на холщовой подкладке. Тиггин и Уэллс, джентльмены, торговали набивными тканями и жилетами, и, стало быть, мой дядя сразу разобрался во всех этих материях. На нем были короткие штаны, какие-то странные гамаши, подвернутые над шелковыми чулками, туфли с пряжками, кружевные манжеты, на голове треуголка, а сбоку длинная шпага, суживающаяся к концу. Жилет спускался ему на бедра, а концы галстука доходили до пояса. Он торжественно приблизился к дверце кареты, снял шляпу и держал ее над головой в вытянутой руке, оттопырив мизинец, как это делают иные жеманные люди, поднося к губам чашку чаю; затем он щелкнул каблуками, важно отвесил низкий поклон и протянул левую руку. Дядя хотел было шагнуть вперед и крепко пожать ее, как вдруг заметил, что эти знаки внимания относились не к нему, а к молодой леди в старомодном зеленом бархатном платье с длинной талией и корсажем, внезапно появившейся у подножки кареты. Вместо шляпы, джентльмены, ее голову покрывал черный шелковый капюшон. Собираясь сесть в карету, она на секунду оглянулась, и такого красивого личика, как у нее, дядя никогда не видывал даже на картинках. Она села в карету, придерживая одной рукой платье; и, — как говаривал мой дядя, подкрепляя свои слова ругательством, когда рассказывал эту историю, — он ни за что бы не поверил, что могут быть на свете такие прелестные ножки, если бы не видел их собственными глазами. Но когда мелькнуло перед ним это прекрасное лицо, дядя заметил, что молодая леди бросила на него умоляющий взгляд и казалась испуганной и огорченной. Увидел он также, что молодой человек в напудренном парике, несмотря на всю свою показную галантность, весьма утонченную и благородную, крепко схватил молодую леди за руку, когда она садилась в карету, и влез тотчас же вслед за ней. С ними отправлялся на редкость безобразный человек в прилизанном коричневом парике, в лиловом костюме, в сапогах, доходивших до бедер, и с очень большим палашом. А когда он уселся рядом с молодой леди, которая забилась в угол, подальше от него, дядя утвердился в первоначальной своей догадке, что тут происходит нечто мрачное и таинственное, или, как он сам говаривал: тут что-то развинтилось. Остается только удивляться, с какой быстротой он принял решение в случае опасности помочь молодой леди, если она будет нуждаться в помощи.</p>
+   <p>— Смерть и молния! — воскликнул молодой джентльмен, хватаясь за шпагу, когда дядя влез в карету.</p>
+   <p>— Кровь и гром! — заревел другой джентльмен.</p>
+   <p>С этими словами он выхватил свой палаш и без лишних церемоний сделал выпад против дяди. У дяди не было при себе оружия, но он очень ловко сорвал с головы безобразного джентльмена треуголку и, насадив ее на кончик его палаша, крепко зажал руками и не отпускал.</p>
+   <p>— Проколите его сзади! — крикнул безобразный джентльмен своему спутнику, пытаясь высвободить палаш.</p>
+   <p>— Не советую! — отозвался дядя, грозно поднимая ногу. — Я мозги у него вышибу или голову ему проломлю, если мозгов у него нет.</p>
+   <p style="text-align:right">
+        <a href="https://ru.wikipedia.org/wiki/Посмертные_записки_Пиквикского_клуба" target="_blank">Чарльз Диккенс «Посмертные записки Пиквикского клуба»</a>
+   <p/>
+   <p></p>
 
     <br/>
     <div>
